--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,4 +5,6 @@
 @import "./navigation.scss";
 @import "./portfolio.scss";
 @import "./portfolio-manager.scss";
+@import "./portfolio-form.scss";
+@import "./portfolio-sidebar.scss";
 @import "./auth.scss";
