--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -3,7 +3,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 
+    .new-blog-link {
+        position: fixed;
+        right: 0;
+        top: 40%;
+        a {
+            font-size: 4em;
+            cursor: pointer;
+            color: $teal;
+            margin-right: 15px;
+            margin-bottom: 15px;
+            transition: 0.5s ease-in-out;
+
+            &:hover {
+                color: $dark-teal;
+            }
+        }
+    }
 
     .content-container {
         display: flex;
