--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,7 @@
 @import "./variables.scss";
 @import "./mixins.scss";
 @import "./base.scss";
+@import "./loaders.scss";
 @import "./forms.scss";
 @import "./button.scss";
 @import "./grid.scss";
@@ -11,4 +12,6 @@
 @import "./portfolio-sidebar.scss";
 @import "./auth.scss";
 @import "./blog.scss";
-@import "./loaders.scss";
+@import "./blog-form.scss";
+@import "./modals.scss";
+@import "./react-draft-wysiwyg.scss"
