--- a/src/style/blog.scss
+++ b/src/style/blog.scss
@@ -53,3 +53,13 @@
         }
     }
 }
+
+.blog-item-container {
+    // background-color: $offwhite;
+    border-radius: 15px;
+    margin-top: 30px;
+    padding: 10px;
+    -webkit-box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.5);
+    -moz-box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.5);
+    box-shadow: 10px 10px 15px -8px rgba(0,0,0,0.5);
+}
