--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -14,4 +14,5 @@
 @import "./blog.scss";
 @import "./blog-form.scss";
 @import "./modals.scss";
-@import "./react-draft-wysiwyg.scss"
+@import "./react-draft-wysiwyg.scss";
+@import "./custom-stuff.scss";
