--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,10 +6,13 @@
 @import "./button.scss";
 @import "./grid.scss";
 @import "./navigation.scss";
+@import "./homepage.scss";
+@import "./layouts.scss";
 @import "./portfolio.scss";
 @import "./portfolio-manager.scss";
 @import "./portfolio-form.scss";
 @import "./portfolio-sidebar.scss";
+@import "./portfolio-detail.scss";
 @import "./auth.scss";
 @import "./blog.scss";
 @import "./blog-form.scss";
